main.css
@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');

@font-face {
    font-family: 'AldotheApache';
    src: url('AldotheApache.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

:root {
    --bullet-colors: #855fdd;
}

* {
    font-family: 'Open Sans', sans-serif;
}

.body {
    overflow: hidden;

}

.title {
    font-family: titillium-Web, sans-serif !important;
    text-transform: uppercase;

}

.section-title {

    font-family: titillium-Web;
    font-weight: bold;
    font-size: 2.4rem;

}



.circle {
    border-radius: 50%;
    width: 46px;
    height: 46px;
    background: var(--bullet-colors);
    color: #fff;
    padding: 13px;
    font: 20px Arial, sans-serif;
    margin-right: 8px;
}

.arrow,
.arrow:visited,
.arrow:hover {
    color: var(--bs-body-color);
    text-decoration: none;
}

.menubut,
.menubut:visited,
.menubut:hover {
    color: var(--bs-body-color);
    text-decoration: none;
}

.arrowicon {

    transition: 0.6s ease;
}

.arrow:not(.collapsed) i {
    transform: rotate(-180deg);
    transition: 0.6s ease;
}

.patrocinadores {
    background-color: #e2e2e2;
}

.premios {
    background-color: #2f2454;
}

.requisitos {
    background-color: #eee9f9;
}

.text-small {
    font-size: 0.9rem;
}

.dotted {
    border-bottom: 3px dashed var(--bullet-colors);
}

.nav-link:hover {
    background-color: #9976eb;
}

.bg-nav {
    --bs-bg-opacity: 1;
    background-color: #383ab5 !important;

}

.bg-bullet {
    --bs-bg-opacity: 1;
    background-color: #2325b8 !important;
}

.navbar-title {
    font-family: sans-serif !important;
    text-transform: uppercase;
    font-weight: 600 !important;
    font-size: 1.1rem !important;
}

.navbar-title-main {
    font-family: sans-serif !important;
    text-transform: uppercase;
    font-weight: 700 !important;
    font-size: 1.3rem !important;
    margin-right: 2% !important;
}


.banner {
    width: 100%;
    height: 70vh;
    color: white;
    overflow: hide;
}

.banner h1,
span {
    font-family: AldotheApache;
    font-size: 5rem;
    margin-top: 5rem;
}

.banner h3 {
    font-size: 1rem;
    font-family: "Roboto", sans-serif;
    font-weight: 100;
}

.banner img {
    margin-top: 2rem;
    width: 50%;
}

.banner .container {
    margin: 0 auto;
}

@media only screen and (min-width: 0px) {
    .banner img {
        margin-top: 2rem;
        width: 80%;
    }
}

@media only screen and (min-width: 452px) {
    .banner img {
        margin-top: 2rem;
        width: 60%;
    }
}

@media only screen and (min-width: 768px) {
    .banner img {
        margin-top: 1rem;
        width: 50%;
    }
}

@media only screen and (min-width: 992px) {
    .banner img {
        margin-top: 1rem;
        width: 40%;
    }
}

/* 
.banner button:hover {
    de
} */

.banner button:focus,
button:hover {
    background-color: #906edd !important;
    outline: none;
    border-color: #906edd !important;
}

@media only screen and (min-width: 1200px) {
    .banner h1 {
        font-size: 8.5rem;
    }

    .banner .container {
        padding-top: 1rem;
    }

    .banner h3 {
        font-size: 2rem;
    }

    .banner img {
        margin-top: 0rem;
        margin-left: 15rem !important;
        width: 75%;
    }

    .banner button {
        font-size: 1.5rem;
    }
}

.dividered-danger::after {
    border-color: var(--bullet-colors) !important;
}



.desc {
    font-weight: 400;
    font-family: Roboto, sans-serif;
    font-size: 1.875rem;
    line-height: 1.2;
    margin-top: 20px;
    margin-bottom: 20px;
    text-transform: uppercase;
}

/* PRIZES SECTION */

.prizes-container-fluid,
.prizes-container {
    color: white;
    font-family: "Open Sans";
}

.card-container {
    padding: 100px 0px;
    -webkit-perspective: 1000;
    perspective: 1000;

}


.profile-card-4 {
    max-width: 300px;
    background-color: #FFF;
    border-radius: 5px;
    box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.1);
    overflow: hidden;
    position: relative;
    margin: 10px auto;
    cursor: pointer;
}

.profile-card-4 img {
    transition: all 0.25s linear;
}

.profile-card-4 .profile-content {
    position: relative;
    padding: 15px;
    background-color: #FFF;
}

.profile-card-4 .profile-name {
    font-weight: bold;
    position: absolute;
    left: 0px;
    right: 0px;
    top: -70px;
    color: #FFF;
    font-size: 17px;
}

.profile-card-4 .profile-name p {
    font-weight: 600;
    font-size: 13px;
    letter-spacing: 1.5px;
}

.profile-card-4 .profile-description {
    color: #777;
    padding: 10px;
    font-weight: 600;
    font-size: 18px;
}

.profile-card-4 .profile-overview {
    padding: 6px 0px;
}

.profile-card-4 .profile-overview p {
    font-size: 10px;
    font-weight: 600;
    color: #777;
    margin-bottom: 2px;
}

.profile-card-4 .profile-overview h4 {
    color: #273751;
    font-weight: bold;
}

.profile-card-4 .profile-content::before {
    content: "";
    position: absolute;
    height: 20px;
    top: -10px;
    left: 0px;
    right: 0px;
    background-color: #FFF;
    z-index: 0;
    transform: skewY(3deg);
}

.profile-card-4:hover img {
    transform: rotate(5deg) scale(1.1, 1.1);
    filter: brightness(110%);
}

/* FAQ SECTION */
.our-faq-wrapper {
    float: left;
    width: 100%;
    padding: 89px 0 60px;
    background: #f5f5f5;
}

.our-faq-wrapper {
    padding: 90px 0 60px;
    background: #fff;
}

.faq-accordion .faq-card {
    border: none;
    margin-bottom: 30px;
}

.our-faq-wrapper .btn-link {
    display: block;
    width: 100%;
    text-align: left;
    position: relative;
    background: #242c42;
    color: #fff;
    border-radius: 0;
    padding: 7px 15px 12px;
    font-size: 16px;
    overflow: hidden;
    border: none;
    font-weight: 600;
    text-decoration: none;

}

.our-faq-wrapper .btn-link:after {
    text-decoration: none;
    position: absolute;
    content: '\f068';
    right: 15px;
    top: 50%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    font-family: fontawesome;
}

.our-faq-wrapper .btn-link.collapsed:after {
    text-decoration: none;
    content: '\f067';
}

.our-faq-wrapper .btn-link:before {
    text-decoration: none;
    position: absolute;
    content: '';
    background: #855fdd;
    -webkit-transform: skew(-35deg);
    transform: skew(-35deg);
    height: 100%;
    width: 50%;
    left: 90%;
    top: 0;
}

.faq-card-header {
    padding: 0;
    background: transparent;
    border-bottom: none;
}

.faq-card-body {
    position: relative;
}

.faq-card-body:after {
    position: absolute;
    content: '';
    height: 2px;
    width: 100%;
    left: 0;
    bottom: 0;
    background: #242c42;
}

.faq-card-body:before {
    position: absolute;
    content: '';
    height: 2px;
    width: 50%;
    left: 0;
    bottom: 0;
    background: #855fdd;
    z-index: 1;
}

.btn-check:focus+.btn-link,
.btn-link:focus,
.btn-link:active,
.btn-link:hover {
    outline: none !important;
    box-shadow: none !important;
    background-color: #242c42 !important;
    color: white !important;
}

